src/objects/UnitAreaTaxationDetail__c.object
<CustomObject>
    <fields>
        <fullName>Apply_Due_On__c</fullName>
        <label>Apply Due On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apply_additional_amount__c</fullName>
        <label>Apply additional amount</label>
        <picklist>
            <picklistValues>
                <fullName>Over prior installments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>As a single and subsequent installments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Area_Type__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Area_Type__c</referenceTo>
        <relationshipLabel>UnitAreaTaxationDetails</relationshipLabel>
        <relationshipName>UnitAreaTaxationDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Area_Value__c</fullName>
        <label>Old Area Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Unit__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>Project_Unit__c.Unit_Status__c</field>
                <operation>equals</operation>
                <value>Sold</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>UnitAreaTaxationDetails</relationshipLabel>
        <relationshipName>UnitAreaTaxationDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>UnitAreaTaxationDetails</relationshipLabel>
        <relationshipName>UnitAreaTaxationDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitAreaTaxationHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UnitAreaTaxationHeader</label>
        <referenceTo>UnitAreaTaxationHeader__c</referenceTo>
        <relationshipLabel>UnitAreaTaxationDetails</relationshipLabel>
        <relationshipName>UnitAreaTaxationDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UnitAreaTaxationDetail</label>
    <nameField>
        <label>Unit Event History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UnitAreaTaxationDetails</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>